apps/opensign/env/k3s-cluster/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensign-mongo
  namespace: opensign
  labels:
    app.kubernetes.io/name: opensign-mongo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: opensign-mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opensign-mongo
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: opensign-mongo
          image: edeedeeed/opensign-mongo:sha-d3e6107
          ports:
            - protocol: TCP
              containerPort: 27017
              name: api
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          hostPath:
            path: /mnt/nfs/AppData/opensign/mongo
            type: Directory
