apps/opensign/env/k3s-cluster/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensign-server
  namespace: opensign
  labels:
    app.kubernetes.io/name: opensign-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: opensign-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opensign-server
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: opensign-server
          image: edeedeeed/opensign-server:sha-d3e6107
          ports:
            - protocol: TCP
              containerPort: 8080
              name: server
